--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+
 
 *{
     box-sizing: border-box;
@@ -49,7 +49,7 @@ header{
     color: white;
     background-image: linear-gradient(#FF79DA, #9356DC);
     border: none;
-    padding: 16px, 32px;
+    padding: 16px 32px;
     border-radius: 32px;
     box-shadow: 2px 5px 13px -4px #000000;
 }
