--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,73 @@
+* {
+  box-sizing: border-box;
+}
 
+body {
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: "Roboto" sans-serif;
+}
+
+/*header*/
+header {
+  display: flex;
+  box-shadow: 0px 3px 1px lightgrey;
+  position: relative;
+}
+header .logo {
+  margin: auto;
+  margin-top: 7px;
+  width: 53%;
+  padding: 10px;
+}
+
+.img {
+  width: 100%;
+  height: 25px;
+}
+
+.menus {
+  background: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu {
+  margin-top: -200px;
+  padding: 0 20px;
+  width: 100%;
+  max-width: 1230px;
+  border-radius: 30px 30px 0 0;
+  background-color: #f6f6f6;
+}
+.menu .menu-header {
+  flex-direction: row;
+}
+
+.menu-header-title {
+  font-family: "shrikhand", cursive;
+}
+
+/*footer
+footer{
+    background: #353535;
+    padding-top: 5px;
+    padding-bottom: 10px;
+
+    h5{
+        font-family: 'Shrikhand' sans-serif;
+        color: white;
+    }
+    .list{
+        list-style: none;
+        color: white;
+    }
+}*/
 
 /*# sourceMappingURL=menu.css.map */
