--- a/css/menu.css
+++ b/css/menu.css
@@ -15,8 +15,8 @@ body {
 /*header*/
 header {
   display: flex;
-  box-shadow: 0px 3px 1px lightgrey;
   position: relative;
+  padding-bottom: 80px;
 }
 header .logo {
   margin: auto;
@@ -27,7 +27,13 @@ header .logo {
 
 .img {
   width: 100%;
-  height: 25px;
+  height: 50vh;
+}
+.img .img_image {
+  margin-top: -80px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .menus {
@@ -54,20 +60,33 @@ header .logo {
   font-family: "shrikhand", cursive;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.grid .menu-grid-title h1 {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
 /*footer
 footer{
     background: #353535;
-    padding-top: 5px;
-    padding-bottom: 10px;
+    padding: 5px 10px;
 
-    h5{
-        font-family: 'Shrikhand' sans-serif;
+    h4{
+        font-family: 'Shrikhand' italic, sans-serif; 
+        color: white;
+        font-weight: 500;
+        padding: 5px 0;
+    }
+    p{
+        padding: 4px;
         color: white;
     }
-    .list{
-        list-style: none;
+    i{
         color: white;
     }
-}*/
+*/
 
 /*# sourceMappingURL=menu.css.map */
