--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,9 +45,9 @@ header{
 /*Explorer*/
 .Explorer{
     text-align: center;
-    width: 89%;
     margin: auto;
-    padding: 10px 5px;
+    padding: 10px 5px 35px 5px;
+    background: #fafafa;
 }
 
 .btn{
@@ -60,42 +60,42 @@ header{
 }
 
 .working{
-    padding: 12px 28px;
-}
-
-.working {
-    h3{
-        font-family: 'Shrikhand' sans-serif;
+    display: flex;
+    justify-content: center;
+   
+    .container{
+        width: 95%;
+        max-width: 1200px;
+        padding: 0;
     }
-    ol{
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
+    .working_title{
+        margin: 0;
     }
-    li{
-        background-color: #f6f6f6;
-        padding: 23px 34px;
-        border-radius: 10px;
-        list-style-type: none;
-        box-shadow: 2px 1px 6px -4px #000000;
-    }    
 }
 
-.mobile {
-    color: grey;
-    margin-right: 15px;
-}
+.working__step{
+    display: flex;
+    align-items: center;
+    background: #f6f6f6;
+    height: 60px;
+    width: 80%;
+    margin: 20px 25px;
+    border-radius: 20px;
+    position: relative;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
 
-.list{
-    color: grey;
-    margin-right: 15px;
-}
+    .working_number{
+        background-color: $color-primary;
+        color: white;
+        padding: 3px 8px 3px 8px;
+        border-radius: 500px;
+    }
 
-.store{
-    color: grey;
-    margin-right: 15px;
+    .working__icon{
+        color: #7E7E7E;
+        margin: 0 20px;
+    }
 }
-
 /*restaurants*/
 .restaurant{
     margin: 0;
@@ -171,17 +171,22 @@ a{
 /*footer*/ 
 footer{
     background: #353535;
-    padding-top: 5px;
-    padding-bottom: 10px;
+    padding: 5px 10px;
 
-    h5{
-        font-family: 'Shrikhand' sans-serif;
+    h4{
+        font-family: 'Shrikhand' italic, sans-serif; 
+        color: white;
+        font-weight: 500;
+        padding: 5px 0;
+    }
+    p{
+        padding: 4px;
         color: white;
     }
-    .list{
-        list-style: none;
+    i{
         color: white;
     }
+
 }
 
  
