--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap');
 
 * {
     box-sizing: border-box;
+    font-family: 'Roboto' sans-serif;
 }
 
 $color-primary: #9356DC;
@@ -88,7 +90,9 @@ header{
         background-color: $color-primary;
         color: white;
         padding: 3px 8px 3px 8px;
-        border-radius: 500px;
+        border-radius: 50%;
+        position: absolute;
+        left: -10px;
     }
 
     .working__icon{
@@ -174,7 +178,7 @@ footer{
     padding: 5px 10px;
 
     h4{
-        font-family: 'Shrikhand' italic, sans-serif; 
+        font-family: 'Shrikhand', sans-serif; 
         color: white;
         font-weight: 500;
         padding: 5px 0;
