--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -57,7 +59,7 @@ header .logo {
 }
 
 .menu-header-title {
-  font-family: "shrikhand", cursive;
+  font-family: "shrikhand";
 }
 
 .grid {
@@ -69,24 +71,32 @@ header .logo {
   text-transform: uppercase;
 }
 
-/*footer
-footer{
-    background: #353535;
-    padding: 5px 10px;
-
-    h4{
-        font-family: 'Shrikhand' italic, sans-serif; 
-        color: white;
-        font-weight: 500;
-        padding: 5px 0;
-    }
-    p{
-        padding: 4px;
-        color: white;
-    }
-    i{
-        color: white;
-    }
-*/
+.menu-grid-case {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 15px;
+  width: 100%;
+  height: 70px;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
+}
+.menu-grid-case .dish-and-price {
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+}
+.menu-grid-case .menu-case-dish {
+  margin-left: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.menu-grid-case .menu-case-dish-title {
+  font-weight: bold;
+}
+.menu-grid-case .menu-case-dish-title .menu-case-dish-subtitle {
+  font-weight: none;
+}
 
 /*# sourceMappingURL=menu.css.map */
