--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,42 @@ body{
     padding: 0px;
     font-family: 'Roboto' sans-serif;
 }
+/*loaders
+.loader{
+    height: 100%;
+    background: #ffffff;
+    margin: auto;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index:2;
+    opacity: 0.9;
+    .loader-quart{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 10px solid #9356DC;
+        border-top: 10px solid #FF79DA;
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        margin: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        animation: spin 2s linear infinite;
+    }
+    }
+
+@keyframes spin{
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(360deg);}
+}*/
+
 /*header*/
 header{
     display: flex;
@@ -61,6 +97,7 @@ header{
     box-shadow: 2px 5px 13px -4px #000000;
 }
 
+/*fonctionnement*/
 .working{
     display: flex;
     justify-content: center;
@@ -109,6 +146,22 @@ header{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    .new{
+        position: relative;
+    }
+    .new::before{
+        content: 'Nouveau';
+        position: absolute;
+        height: 40px;
+        width: 27%;
+        background-color: $color-tertiary;
+        color: darken($color: $color-tertiary, $amount: 50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        top: 17px;
+        right: 19px;
+    }
 }
 
 .restaurant-title{
@@ -121,7 +174,7 @@ header{
     grid-template-columns: 1fr;
     grid-gap: 20px;
     padding: 20px;
-}
+    }
 
 
 a{
@@ -190,10 +243,4 @@ footer{
     i{
         color: white;
     }
-
 }
-
- 
-
-
-
