solve problem padding restaurant

--- a/css/main.css
+++ b/css/main.css
@@ -134,7 +134,7 @@ header .logo {
 .restaurant {
   margin: 0;
   background: #f6f6f6;
-  padding: 20px;
+  padding: 10px;
   max-width: 1200px;
   display: flex;
   flex-direction: column;
@@ -166,7 +166,6 @@ header .logo {
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: 1fr;
   grid-gap: 20px;
-  padding: 20px;
 }
 
 a {
@@ -211,6 +210,11 @@ a {
 }
 .restaurant-block .restaurant-block-name {
   font-weight: 700;
+}
+.restaurant-block .restaurant-block-heart {
+  position: relative;
+  left: 290px;
+  bottom: 25px;
 }
 
 /*footer*/
