--- a/css/menu.css
+++ b/css/menu.css
@@ -7,11 +7,14 @@
 body {
   margin: 0px;
   padding: 0px;
+  font-family: "Roboto" sans-serif;
+  /*margin: 0px;
+  padding: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-family: "Roboto" sans-serif;
+  font-family: 'Roboto' sans-serif;*/
 }
 
 /*header*/
@@ -25,6 +28,12 @@ header .logo {
   margin-top: 7px;
   width: 53%;
   padding: 10px;
+}
+@media screen and (min-width: 800px) {
+  header .logo {
+    width: 18%;
+    padding: 24px;
+  }
 }
 
 .img {
@@ -64,40 +73,89 @@ header .logo {
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
 }
-.grid .menu-grid-title h1 {
-  font-weight: 400;
-  text-transform: uppercase;
+@media screen and (min-width: 800px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
 }
 
-.menu-grid-case {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  border-radius: 15%;
-  width: 100%;
-  height: 70px;
+.grid-title h3 {
+  padding: 0;
+  margin: 5px;
+  text-transform: uppercase;
+  font-weight: 400;
 }
-.menu-grid-case .dish-and-price {
+
+.menu-grid-bloc {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  border-radius: 15px;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
+}
+
+.menu-case-dish {
+  margin-left: 15px;
+}
+
+.dish-and-price {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.menu-grid-case .dish-and-price-case {
-  white-space: nowrap;
-  margin-left: 10px;
+.dish-and-price .price {
+  font-weight: bold;
+  padding-right: 10px;
+}
+.dish-and-price .dish-and-price-title {
+  margin-top: -10px;
+}
+.dish-and-price .dish-and-price-subtitle {
+  margin-top: -20px;
+  margin-bottom: -8px;
 }
 
-.dish-and-price-title {
-  font-weight: bold;
+/*bouton commander*/
+.command {
+  height: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f6f6f6;
+}
+.command .btn {
+  color: white;
+  background-image: linear-gradient(180deg, rgb(255, 121, 218) 0%, rgb(147, 86, 220) 100%);
+  border: none;
+  padding: 16px 32px;
+  border-radius: 32px;
+  box-shadow: 2px 5px 13px -4px #000000;
 }
 
-.price {
-  font-weight: bold;
-  padding-left: 90px;
+/*footer*/
+footer {
+  background: #353535;
+  padding: 5px 10px;
+}
+footer h4 {
+  font-family: "Shrikhand", sans-serif;
+  color: white;
+  font-weight: 500;
+  padding: 5px 0;
+}
+footer p {
+  padding: 4px;
+  color: white;
+}
+footer i {
+  color: white;
+}
+footer a {
+  color: white;
 }
 
 /*# sourceMappingURL=menu.css.map */
