--- a/sass/main.scss
+++ b/sass/main.scss
@@ -63,6 +63,10 @@ header{
         margin-top: 7px;
         width: 53%;
         padding: 10px; 
+        @media screen and (min-width: 800px){
+            width: 18%;
+            padding: 24px; 
+        }
     }
 }
 
@@ -112,6 +116,13 @@ header{
     }
 }
 
+@media screen and (min-width: 800px){
+    .working__steps{
+    display: flex;
+    flex-direction: row;
+    }
+}
+
 .working__step{
     display: flex;
     align-items: center;
@@ -122,7 +133,9 @@ header{
     border-radius: 20px;
     position: relative;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
-
+    @media screen and (min-width: 800px){
+        margin: 20px 70px;
+    }
     .working_number{
         background-color: $color-primary;
         color: white;
@@ -146,6 +159,12 @@ header{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    @media screen and (min-width: 800px){
+        margin: auto;
+        padding-left: 20px;
+        padding-top: 0px;
+        padding-bottom: 35px;
+    }
     .new{
         position: relative;
     }
@@ -162,6 +181,7 @@ header{
         top: 17px;
         right: 19px;
     }
+
 }
 
 .restaurant-title{
@@ -173,9 +193,13 @@ header{
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: 1fr;
     grid-gap: 20px;
+    @media screen and (min-width: 800px){
+        grid-gap: 100px;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        align-self: center;
     }
-
-
+}
 a{
     text-decoration: none;
     color: white;
@@ -220,20 +244,31 @@ a{
 
     .restaurant-block-name{
         font-weight: 700;
-    }
-    .restaurant-block-heart{
-      position: relative;
-      left: 290px;
-      bottom: 25px;
-
-    }
+    } 
 }
+
+.restaurant-block-heart{
+    position: relative;
+    left: 290px;
+    bottom: 25px;
+    fa-thin fa-heart{
+    background-color: 1px solid black;
+    }
+  }
 
 
 /*footer*/ 
 footer{
     background: #353535;
     padding: 5px 10px;
+    padding: 1px 80px;
+    @media screen and (min-width: 800px){
+    padding-top: 1px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    }
 
     h4{
         font-family: 'Shrikhand', sans-serif; 
