--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 
 * {
     box-sizing: border-box;
-    font-family: 'Roboto' sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 $color-primary: #9356DC;
@@ -14,20 +14,20 @@ $gradient : linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 1
 body{
     margin: 0px;
     padding: 0px;
-    font-family: 'Roboto' sans-serif;
 }
-/*loaders
+/*loaders*/
 .loader{
     height: 100%;
-    background: #ffffff;
+    background: rgba(255, 255, 255, 0.9);
     margin: auto;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    z-index:2;
-    opacity: 0.9;
+    z-index: 2;
+    visibility: hidden;
+    animation: fade 2s;
     .loader-quart{
         display: flex;
         justify-content: center;
@@ -43,14 +43,19 @@ body{
         left: 0;
         right: 0;
         bottom: 0;
-        animation: spin 2s linear infinite;
+        animation: spin 2s linear infinite ;
     }
     }
 
 @keyframes spin{
-    0%{transform: rotate(0deg);}
+    0%{transform: rotate(0deg); }
     100%{transform: rotate(360deg);}
-}*/
+}
+
+@keyframes fade{
+    0%{visibility: visible;}
+    100%{visibility:hidden;}
+}
 
 /*header*/
 header{
@@ -128,7 +133,7 @@ header{
     align-items: center;
     background: #f6f6f6;
     height: 60px;
-    width: 80%;
+    width: 88%;
     margin: 20px 25px;
     border-radius: 20px;
     position: relative;
@@ -261,17 +266,17 @@ a{
 footer{
     background: #353535;
     padding: 5px 10px;
-    padding: 1px 80px;
     @media screen and (min-width: 800px){
     padding-top: 1px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100px;
+    padding: 1px 80px;
     }
 
     h4{
-        font-family: 'Shrikhand', sans-serif; 
+        font-family: 'shrikhand', sans-serif; 
         color: white;
         font-weight: 500;
         padding: 5px 0;
