--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 * {
   box-sizing: border-box;
+  font-family: "roboto", sans-serif;
 }
 
 body {
@@ -77,8 +78,9 @@ header .logo {
 }
 @media screen and (min-width: 800px) {
   .grid {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr;
+     grid-template-rows: 1fr 1fr;*/
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
