--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 
 * {
     box-sizing: border-box;
+    font-family: 'roboto', sans-serif;
 }
 
 
@@ -86,8 +87,9 @@ header{
     display: grid;
     gap: 10px;
     @media screen and (min-width: 800px){
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+       /* grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;*/
+        grid-template-columns: repeat(3, 1fr);
     }
 }
 
