--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -89,7 +89,7 @@ header{
     @media screen and (min-width: 800px){
        /* grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;*/
-        grid-template-columns: repeat(3, 1fr);
+        grid-auto-columns: 20px;
     }
 }
 
