--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 * {
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto" sans-serif;
 }
 
 body {
@@ -45,6 +45,9 @@ body {
 @keyframes spin {
   0% {
     transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180);
   }
   100% {
     transform: rotate(360deg);
@@ -163,7 +166,7 @@ header .logo {
 .restaurant {
   margin: 0;
   background: #f6f6f6;
-  padding: 10px;
+  padding: 13px;
   max-width: 1200px;
   display: flex;
   flex-direction: column;
@@ -224,7 +227,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: flex-end;
-  width: 124%;
+  width: 135%;
   border-radius: 20px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
 }
