--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,7 +3,7 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto' sans-serif;
 }
 
 $color-primary: #9356DC;
@@ -49,6 +49,7 @@ body{
 
 @keyframes spin{
     0%{transform: rotate(0deg); }
+    50%{transform: rotate(180);}
     100%{transform: rotate(360deg);}
 }
 
@@ -159,7 +160,7 @@ header{
 .restaurant{
     margin: 0;
     background: #f6f6f6;
-    padding: 10px;
+    padding: 13px;
     max-width: 1200px;
     display: flex;
     flex-direction: column;
@@ -216,7 +217,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    width: 124%;
+    width: 135%;
     border-radius: 20px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
 }
