--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -165,6 +165,14 @@ header{
         margin-bottom: -8px;
     }
 }
+
+.menu-check{
+    background-color: $color-tertiary;
+    padding: 10px;
+    width: 17%;
+    height: 71%;
+    text-align: center;
+}
 /*bouton commander*/
 .command{
     height: 130px;
