--- a/css/menu.css
+++ b/css/menu.css
@@ -5,6 +5,30 @@
   font-family: "roboto" sans-serif;
 }
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes fade {
+  0% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+@keyframes appear {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 body {
   margin: 0px;
   padding: 0px;
@@ -22,7 +46,7 @@ body {
   right: 0;
   z-index: 2;
   visibility: hidden;
-  animation: fade 2s;
+  animation: fade 1s;
 }
 .loader .loader-quart {
   display: flex;
@@ -39,28 +63,9 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  animation: spin 2s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  50% {
-    transform: rotate(180);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-@keyframes fade {
-  0% {
-    visibility: visible;
-  }
-  100% {
-    visibility: hidden;
-  }
-}
 /*header*/
 header {
   display: flex;
@@ -77,6 +82,22 @@ header .logo {
   header .logo {
     width: 18%;
     padding: 24px;
+  }
+}
+header .arrow-back {
+  position: absolute;
+  left: 30px;
+  top: 22px;
+  font-size: 20px;
+}
+header .arrow-back a {
+  color: black;
+}
+@media screen and (min-width: 800px) {
+  header .arrow-back {
+    left: 50px;
+    top: 30px;
+    font-size: 30px;
   }
 }
 
@@ -121,9 +142,10 @@ header .logo {
 }
 @media screen and (min-width: 800px) {
   .grid {
-    /* grid-template-columns: 1fr 1fr;
-     grid-template-rows: 1fr 1fr;*/
-    grid-auto-columns: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-auto-flow: column;
+    grid-gap: 30px;
   }
 }
 
@@ -133,6 +155,26 @@ header .logo {
   text-transform: uppercase;
   font-weight: 400;
 }
+@media screen and (min-width: 800px) {
+  .grid-title h3 {
+    margin: 16px 0px;
+  }
+}
+.grid-title :after {
+  content: "";
+  background-color: #99E2D0;
+  width: 11%;
+  height: 4px;
+  position: absolute;
+  left: 26px;
+  display: flex;
+}
+@media screen and (min-width: 800px) {
+  .grid-title :after {
+    position: unset;
+    width: 14%;
+  }
+}
 
 .menu-grid-bloc {
   background-color: white;
@@ -140,6 +182,14 @@ header .logo {
   align-items: center;
   border-radius: 15px;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  animation: appear 2s;
+  animation-fill-mode: both;
+}
+@media screen and (min-width: 800px) {
+  .menu-grid-bloc {
+    margin-top: -13px;
+  }
 }
 
 .menu-case-dish {
@@ -165,7 +215,21 @@ header .logo {
 }
 
 .menu-check {
-  background-color: #99E2D0;
+  background: #99E2D0;
+  border-radius: 0 15px 15px 0;
+  padding: 0 13px;
+  height: 100%;
+  background-position: right;
+}
+.menu-check i {
+  font-size: 30px;
+  color: white;
+  padding-top: 14px;
+  animation: spin 1s both;
+}
+
+.menu-check:hover {
+  background-position: right;
 }
 
 /*bouton commander*/
@@ -175,6 +239,11 @@ header .logo {
   align-items: center;
   justify-content: center;
   background-color: #f6f6f6;
+}
+@media screen and (min-width: 800px) {
+  .command {
+    margin: 0 105px;
+  }
 }
 .command .btn {
   color: white;
