--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,17 @@ $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
 $gradient : linear-gradient(180deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
 
+
+@keyframes spin{
+    0%{transform: rotate(0deg); }
+    100%{transform: rotate(360deg);}
+}
+
+@keyframes fade{
+    0%{visibility: visible;}
+    100%{visibility:hidden;}
+}
+
 body{
     margin: 0px;
     padding: 0px;
@@ -27,7 +38,7 @@ body{
     right: 0;
     z-index: 2;
     visibility: hidden;
-    animation: fade 2s;
+    animation: fade 1s;
     .loader-quart{
         display: flex;
         justify-content: center;
@@ -43,20 +54,10 @@ body{
         left: 0;
         right: 0;
         bottom: 0;
-        animation: spin 2s linear infinite ;
+        animation: spin 1s linear infinite ;
     }
     }
 
-@keyframes spin{
-    0%{transform: rotate(0deg); }
-    50%{transform: rotate(180);}
-    100%{transform: rotate(360deg);}
-}
-
-@keyframes fade{
-    0%{visibility: visible;}
-    100%{visibility:hidden;}
-}
 
 /*header*/
 header{
@@ -200,7 +201,7 @@ header{
     grid-template-columns: 1fr;
     grid-gap: 20px;
     @media screen and (min-width: 800px){
-        grid-gap: 100px;
+        grid-gap: 133px;
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
         align-self: center;
@@ -217,7 +218,7 @@ a{
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
-    width: 135%;
+    width: 120%;
     border-radius: 20px;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
 }
@@ -242,7 +243,6 @@ a{
     width: 100%;
     height: 72px;
     border-radius: 0 0 20px 20px;
-
     .restaurant-block-info{
         color: black;
         margin-left: 20px;
@@ -257,6 +257,7 @@ a{
     position: relative;
     left: 290px;
     bottom: 25px;
+    font-size: 20px;
     fa-thin fa-heart{
     background-color: 1px solid black;
     }
