--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 * {
   box-sizing: border-box;
-  font-family: "Roboto" sans-serif;
 }
 
 @keyframes spin {
@@ -24,6 +23,7 @@
 body {
   margin: 0px;
   padding: 0px;
+  font-family: "Roboto" sans-serif;
 }
 
 /*loaders*/
@@ -86,7 +86,6 @@ header .logo {
   gap: 10px;
   padding: 4px;
   font-size: 50%;
-  font-family: "Roboto" sans-serif;
 }
 
 .map {
@@ -254,6 +253,23 @@ a {
   margin-left: 20px;
 }
 .restaurant-block .restaurant-block-name {
+  font-weight: 700;
+}
+
+.restaurant-block2 {
+  background: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 72px;
+  border-radius: 0 0 20px 20px;
+}
+.restaurant-block2 .restaurant-block-info {
+  color: black;
+  margin-left: 20px;
+}
+.restaurant-block2 .restaurant-block-name {
   font-weight: 700;
 }
 
