--- a/css/menu.css
+++ b/css/menu.css
@@ -224,14 +224,13 @@ header .arrow-back a {
 .menu-check i {
   font-size: 30px;
   color: white;
-  padding-top: 14px;
+  padding-top: 15px;
   animation: spin 1s both;
 }
 
-.menu-check:hover {
-  background-position: right;
-}
-
+/*.menu-check:hover{
+    background-position: right;
+}*/
 /*bouton commander*/
 .command {
   height: 130px;
