--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -218,13 +218,13 @@ header{
     i{
         font-size: 30px;
         color: white;
-        padding-top: 14px;
+        padding-top: 15px;
         animation: spin 1s both;
     }
 }
-.menu-check:hover{
+/*.menu-check:hover{
     background-position: right;
-}
+}*/
 
 
 /*bouton commander*/
